--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li class="nav-item dropdown mt-1 mr-3 ml-3">
             <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              <img class="rounded-circle" src="https://picsum.photos/id/10/25?blur=5"
+              <img class="rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwNrslMDR0xY3p9ZO1ayQ7o6hdABYduvvpTsAypyr6YQ&s"
                 style="width: 20px; height: 20px;" />
               <div class="menutext">Ben</div>
             </a>
